--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
+
+<head>
+    <title>Login</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="../src/assets/images/icons/favicon.ico" />
+    <link rel="stylesheet" type="text/css" href="../src/assets/vendor/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" type="text/css" href="../src/assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css" />
+    <link rel="stylesheet" type="text/css" href="../src/assets/fonts/iconic/css/material-design-iconic-font.min.css" />
+    <link rel="stylesheet" type="text/css" href="../src/assets/vendor/animate/animate.css" />
+    <link rel="stylesheet" type="text/css" href="../src/assets/vendor/css-hamburgers/hamburgers.min.css" />
+    <link rel="stylesheet" type="text/css" href="../src/assets/vendor/animsition/css/animsition.min.css" />
+    <link rel="stylesheet" type="text/css" href="../src/assets/vendor/select2/select2.min.css" />
+    <link rel="stylesheet" type="text/css" href="../src/assets/vendor/daterangepicker/daterangepicker.css" />
+    <link rel="stylesheet" type="text/css" href="../src/assets/css/util.css" />
+    <link rel="stylesheet" type="text/css" href="../src/assets/css/main.css" />
+    <link href="https://cdn.materialdesignicons.com/4.4.95/css/materialdesignicons.min.css" rel="stylesheet" />
+    <link rel="stylesheet" type="text/css" href="styles/main.css" />
+</head>
+
+<body>
     <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+    <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script>
+
+</body>
+
 </html>
