--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 
 <head>
-    <title>Login</title>
+    <title>ZaietsBooking</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="../src/assets/images/icons/favicon.ico" />
+    <link rel="icon" type="image/png" href="../images/logo.png" />
     <link rel="stylesheet" type="text/css" href="../src/assets/vendor/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" type="text/css" href="../src/assets/fonts/font-awesome-4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" type="text/css" href="../src/assets/fonts/iconic/css/material-design-iconic-font.min.css" />
